GOMES_RODRIGUES_ANDRE_PYTHON-main/RGI_PROJET_PYTHON/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: DB_HOST
              valueFrom:
                configMapKeyRef:
                  key: DB_HOST
                  name: env
            - name: DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: DB_NAME
                  name: env
            - name: DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DB_PASSWORD
                  name: env
            - name: DB_USER
              valueFrom:
                configMapKeyRef:
                  key: DB_USER
                  name: env
            - name: MAIL_DEFAULT_SENDER
              valueFrom:
                configMapKeyRef:
                  key: MAIL_DEFAULT_SENDER
                  name: env
            - name: MAIL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MAIL_PASSWORD
                  name: env
            - name: MAIL_PORT
              valueFrom:
                configMapKeyRef:
                  key: MAIL_PORT
                  name: env
            - name: MAIL_SERVER
              valueFrom:
                configMapKeyRef:
                  key: MAIL_SERVER
                  name: env
            - name: MAIL_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: MAIL_USERNAME
                  name: env
            - name: MAIL_USE_TLS
              valueFrom:
                configMapKeyRef:
                  key: MAIL_USE_TLS
                  name: env
            - name: MYSQL_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_DATABASE
                  name: env
            - name: MYSQL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_PASSWORD
                  name: env
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_ROOT_PASSWORD
                  name: env
            - name: MYSQL_USER
              valueFrom:
                configMapKeyRef:
                  key: MYSQL_USER
                  name: env
            - name: SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  key: SECRET_KEY
                  name: env
          image: mysql:5.7
          name: db
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/BDD_Avec_Donnees.sql
              name: db-cm0
              subPath: BDD_Avec_Donnees.sql
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: BDD_Avec_Donnees.sql
                path: BDD_Avec_Donnees.sql
            name: db-cm0
          name: db-cm0
