GOMES_RODRIGUES_ANDRE_PYTHON-main/RGI_PROJET_PYTHON/flask-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: flask-app
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flask-app
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: flask-app
    spec:
      containers:
        - image: agrandre/python:latest
          name: flask-app
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
